--- a/TripCostCalc/index.html
+++ b/TripCostCalc/index.html
@@ -10,32 +10,17 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
-
-    <!-- JavaScript Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script> -->
 </head>
-
-<style>
-    .form-spacing {
-        display: flex;
-        flex-direction: column;
-        /* justify-content: space-between; */
-        gap: 1rem;
-    }
-</style>
 
 <body>
     <div class="card m-4">
-        <main class="card-body">
+        <div class="card-body">
             <h2 class="card-title"> <svg xmlns="http://www.w3.org/2000/svg" width="32"  fill="currentColor" class="bi bi-calculator" viewBox="0 0 16 16">
                 <path d="M12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h8zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4z"/>
                 <path d="M4 2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-2zm0 4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-4z"/>
               </svg> Trip Cost Calculator</h2>
 
-            <form class="form-spacing" id="inputForm">
+            <form class="d-flex flex-column gap-2" id="inputForm">
                 <div class="form-floating">
                     <input type="number" class="form-control" id="fuelPrice" min="0" placeholder="103" data-decimals="2"
                         step="0.01" value="103">
@@ -73,22 +58,19 @@
                   <h3 id="perHead" >,Per Head.</h3>    
             </div>
             
-        </main>
+        </div>
     </div>
 </body>
 
 <script>
     const tripCostElm = document.querySelector("#tripCost")
     const perHeadElm = document.querySelector("#perHead")
-
     perHeadElm.hidden = true;
 
     document.querySelector("#inputForm").addEventListener("submit", e => {
         e.preventDefault();
-        // console.log(e)
         calculateTripCost(e.target)
     })
-
 
     function calculateTripCost(target) {
         let fuelPrice = target[0].value;
