💄 Added filesize btns

--- a/DownloadTimeCalc/index.html
+++ b/DownloadTimeCalc/index.html
@@ -27,17 +27,26 @@
                     </svg> Download Time Calculator</h3>
 
                 <span id="speed-btns">
-                    <button class="btn btn-success" value="10">10Mbps</button>
-                    <button class="btn btn-secondary" value="20">20Mbps</button>
-                    <button class="btn btn-primary" value="50">50Mbps</button>
-                    <button class="btn btn-warning" value="100">100Mbps</button>
-                    <button class="btn btn-danger" value="1024">1Gbps</button>
+                    <button class="btn btn-success" value="10">10 Mbps</button>
+                    <button class="btn btn-secondary" value="20">20 Mbps</button>
+                    <button class="btn btn-primary" value="50">50 Mbps</button>
+                    <button class="btn btn-warning" value="100">100 Mbps</button>
+                    <button class="btn btn-danger" value="1024">1 Gbps</button>
                 </span>
 
                 <div class="form-floating">
                     <input id="speed" class="form-control" value="100" type="text" placeholder="Speed (Mbps)" />
                     <label for="speed">Speed (Mbps)</label>
                 </div>
+
+                <span id="filesize-btns">
+                    <button class="btn btn-success" value="0.10">100 MB</button>
+                    <button class="btn btn-secondary" value="0.5">500 MB</button>
+                    <button class="btn btn-primary" value="2">2 GB</button>
+                    <button class="btn btn-warning" value="5">5 GB</button>
+                    <button class="btn btn-danger" value="10">10 GB</button>
+                </span>
+
 
                 <div class="form-floating">
                     <input id="filesize" class="form-control" value="1" type="text" placeholder="File Size in GB">
